	* configs/stm3210e-eval/src/stm32102e-internal.h.  Fix on-board LED GPIO definitions.
	* arch/arm/src/stm32/src/stm32/stm32_dma.c.  Added DMA channel support for the STM32
	* arch/arm/src/stm32/src/stm32/stm32_spi.c.  Added a DMA-based SPI driver for the STM32.
	* arch/arm/src/stm32/src/stm32/stm32_serial.c.  Finished interrupt-drivent,
	  USART console driver.  This makes NSH work perfectly.
	* Things left to do for the STM32 deferred to the 0.4.13 release:  USB device driver,
	  LCD driver and NX bringup on the eval board's display and MicroSD support.  An SPI
	  driver was included in the 0.4.12 release, but is not yet tested.

0.4.13 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* include/nuttx/mtd.h.  Added a simple interface definition to support some
	  FLASH, EEPROM, NVRAM, etc. devices.
	* driver/mtd/m25px.c.  Added a driver for SPI based FLASH parts M25P64 and M25P128.
	* configs/stm3210e-eval/usbserial.  Add a USB serial configuration for the STM32.
	  This is for test and development; the STM32 has not yet been checked in.
	* arch/arm/src/cortexm3/up_switchcontext.S & up_svccall.c.  Made an improvement
	  to context switching.  There are two types of context switches:  interrupt
	  context switches and background/user context switches.  This change should
	  improve the performance of those background/user context switches by a factor
	  of about two.
	* arch/arm/src/stm32/ - fix several typos in the serial logic.  It turns out
	  that these typose don't make any difference as long as you use only one
	  serial port and all uarts are configured the same.  But the typos are bugs
	  waiting to happen in any other configuration.
	* arch/arm/src/stm32/ - You have to configure CTS/RTS function pins for USART
	  2 and USART 3 even if you are not using flow control.
	* arch/arm/src/stm32/stm32_usbdev.c - Added a USB device-side driver for the
	  STM32.

		NOTE: This USB driver is completely untested as of the initial check-in
